# nes

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/touch/nes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gpl_en.txt  gpl_en.txt.bak  introduce_bakzh.txt  introduce_en.txt  introduce_zh.txt  legal_en.txt  legal_zh.txt
app/src/main/java/com/falcon/nester/: AboutActivity.java  FileListActivity.java  MainActivity.java  NesActivity.java  NesInput.java  NesSimu.java  NesView.java
app/src/main/jni/: Android.mk  InfoNES_Sound_Android.c  InfoNES_Sound_Android.h  InfoNES_System_Android.c  buffersoundpool.c  buffersoundpool.h  com_falcon_nester_NesSimu.c  infones_system_android.h  opensl_helpers.h
app/src/main/jni/nes/c/: InfoNES.c  InfoNES_Mapper.c
app/src/main/jni/nes/c/mapper/: InfoNES_Mapper_000.c  InfoNES_Mapper_004.c  InfoNES_Mapper_005.c  InfoNES_Mapper_006.c  (+17 more)
app/src/main/jni/nes/h/: InfoNES.h  InfoNES_Mapper.h  InfoNES_System.h  InfoNES_Types.h  K6502.h  K6502_rw.h
app/src/main/jni/utils/: jniutils.h
app/src/main/res/layout/: about.xml  activity_nes.xml  file_list_item_2.xml  file_list_item_3.xml  main.xml  preference_widget_seekbar.xml  volume_setting.xml
app/src/main/res/menu/: nes_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-v11/: styles.xml
app/src/main/res/values-zh/: arrays.xml  strings.xml
app/src/main/res/xml/: audio_settings.xml  pad_settings.xml  screen_settings.xml  settings.xml  settings_header.xml  settings_header_legacy.xml
(+6 files in other folders)
